# Cosmetic

./: .gitignore
cosmetic_app/: pyproject.toml
cosmetic_app/cosmetic_app/: main.py
cosmetic_app/cosmetic_app/api/: __init__.py
cosmetic_app/cosmetic_app/api/api_v1/endpoints/: __init__.py  brand.py  category.py  depends_endps.py  kafka_utils.py  order.py  product.py  profile.py  tag.py  user.py
cosmetic_app/cosmetic_app/core/: __init__.py  config.py
cosmetic_app/cosmetic_app/crud/: __init__.py  brand.py  category.py  order.py  product.py  profile.py  tag.py  user.py
cosmetic_app/cosmetic_app/db/: __init__.py  base_class.py  db_helper.py  db_init.py  init_data.py
cosmetic_app/cosmetic_app/models/: __init__.py  associate_category_product.py  associate_order_product.py  associate_tag_product.py  brand.py  category.py  gist.py  order.py  product.py  profile.py  tags.py  user.py
cosmetic_app/cosmetic_app/schemas/: __init__.py  brand.py  category.py  order.py  product.py  profile.py  tags.py  user.py
cosmetic_app/raro.prowebmarket.ru/: cart.html  default.htm
cosmetic_app/raro.prowebmarket.ru/info/: 43-dostavka.html  44-oplata-tovara.html  46-politika-klnfidicialnosti.html  default.htm
cosmetic_app/raro.prowebmarket.ru/ptoduct/: catalog.js  collections-data.js  default.htm  order-confirm.js  order-track.js
cosmetic_app/raro.prowebmarket.ru/templates/Cosmo/css/: style.css
cosmetic_app/tests/: conftest.py
cosmetic_app/tests/test_api/: test_category.py  test_product.py  test_tag.py  test_user.py
cosmetic_app/tests/test_auth/: test_auth.py
cosmetic_app/tests/test_database/: test_category.py  test_order.py  test_product.py  test_tag.py  test_user.py
cosmetic_app/tests/test_websockets/: test_websockets.py
